add more css and html

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,3 +31,7 @@
 [type=radio]:checked + h1, [type=radio]:checked + .colleges {
   outline: 2px solid #f00;
 }
+
+#collegePage {
+  display: none;
+}
