--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,10 @@
 
 }
 
+#rotatingCard {
+  margin-bottom: 90px;
+}
+
 [type=radio] {
   position: absolute;
   opacity: 0;
@@ -32,9 +36,16 @@
   cursor: pointer;
 }
 
-[type=radio]:checked + h1, [type=radio]:checked + .colleges {
-  outline: 2px solid #5ee0ec;
+[type=radio]:checked + .colleges {
+  border-top: 5px solid #5ee0ec;
+  border-left: 5px solid #5ee0ec;
+  border-right: 5px solid #5ee0ec;
 }
+
+[type=radio]:checked + h1 {
+  border-bottom: 5px solid #5ee0ec;
+}
+
 .pos-f-t{
   display: none;
 }
@@ -78,15 +89,15 @@
   text-align: center;
 }
 
-.gif{
+.gif {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
-  height: 150%;
+  width: 300px;
+  height: 200px;
 }
 
-.image{
+.image {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -94,7 +105,50 @@
   height: 100%;
 }
 
-.washington{
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 133px;
+  perspective: 1000px;
+}
+
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 150%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+.washington {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -115,18 +169,10 @@ form, #major {
   display: inline-block;
 }
 
-.reveal-if-active {
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-  transform: scale(0.8);
-  transition: 0.5s;
-  input[type="radio"]:checked ~ &,
-  input[type="checkbox"]:checked ~ & {
-    opacity: 1;
-    max-height: 100px;
-    overflow: visible;
-    padding: 10px 20px;
-    transform: scale(1);
-  }
+#homeCollege, #home {
+  cursor: pointer;
+}
+
+.navbar {
+  margin-left: 94%;
 }
