--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,34 @@
+.bg-imge{
+
+}
+body {
+  text-align: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: top;
+  background-image:url(http://bit.ly/2gPLxZ4);
+  width: 100%;
+  height: 100%;
+
+}
+
+.container{
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
+
 .tron {
   text-align: center;
   font-family: sans-serif;
@@ -63,6 +94,11 @@
   font-weight: bold;
   font-family: fantasy;
   cursor: pointer;
+  border-radius: 10%;
+}
+
+.round {
+  border-radius: 10%;
 }
 
 #collegeROI:hover {
@@ -75,10 +111,6 @@
 
 #results {
   display: none;
-}
-
-#city {
-
 }
 
 .colleges {
@@ -111,6 +143,7 @@
   height: 133px;
   perspective: 1000px;
 }
+
 
 
 .flip-card-inner {
@@ -156,17 +189,6 @@
 }
 
 
-body {
-  color: white;
-  text-align: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: top;
-  background-image:url(http://bit.ly/2gPLxZ4);
-  width: 100%;
-  height: 100 % ;
-}
 
 
 form, #city {
