--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,6 @@
-.bg-imge{
 
-}
 body {
+
   text-align: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -10,7 +9,6 @@ body {
   background-image:url(http://bit.ly/2gPLxZ4);
   width: 100%;
   height: 100%;
-
 }
 
 .container{
@@ -68,7 +66,7 @@ body {
 }
 
 [type=radio]:checked + .colleges, [type=radio]:checked + .howYouLive, [type=radio]:checked + h1 {
-  border-top: 5px solid #5ee0ec;
+  border-top: 5px solid gray;
   padding-top: 5px;
 
 }
@@ -96,7 +94,9 @@ body {
   cursor: pointer;
   border-radius: 10%;
 }
-
+.roundUnderline{
+  border-radius: 20px;
+}
 .round {
   border-radius: 10%;
 }
@@ -115,10 +115,12 @@ body {
 
 .colleges {
   text-align: center;
+  border-radius: 20px;
 }
 
 .howYouLive {
   text-align: center;
+  border-radius: 20px;
 }
 
 .gif {
@@ -127,6 +129,7 @@ body {
   margin-right: auto;
   width: 300px;
   height: 200px;
+  border-radius: 20px;
 }
 
 .image {
@@ -142,6 +145,7 @@ body {
   width: 300px;
   height: 133px;
   perspective: 1000px;
+
 }
 
 
@@ -154,6 +158,7 @@ body {
   transition: transform 0.8s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
 }
 
 
@@ -167,6 +172,7 @@ body {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  border-radius: 20px;
 }
 
 
