--- a/src/styles.css
+++ b/src/styles.css
@@ -1,43 +1,16 @@
-
-body {
-
-  text-align: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: top;
-  background-image:url(http://bit.ly/2gPLxZ4);
-  width: 100%;
-  height: 100%;
-}
-
-.container{
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 80%;
-  padding: 20px;
-  text-align: center;
-}
-
 .tron {
   text-align: center;
   font-family: sans-serif;
+  opacity: 80%;
   margin-top: 20px;
 }
-
 .form-control {
   width: 200px;
   border: 2px solid black;
   padding: 15px;
   margin: 10px;
+
+
 }
 
 #cashToday {
@@ -45,6 +18,7 @@ body {
   border: 2px solid black;
   padding: 5px;
   margin: 10px;
+
 }
 
 #rotatingCard {
@@ -63,7 +37,7 @@ body {
 }
 
 [type=radio]:checked + .colleges, [type=radio]:checked + .howYouLive, [type=radio]:checked + h1 {
-  border-top: 5px solid gray;
+  border-top: 5px solid #5ee0ec;
   padding-top: 5px;
 
 }
@@ -89,33 +63,30 @@ body {
   font-weight: bold;
   font-family: fantasy;
   cursor: pointer;
-  border-radius: 10%;
-}
-.roundUnderline{
-  border-radius: 20px;
-}
-.round {
-  border-radius: 10%;
-  background-color: #b4033b;
 }
 
-#collegeROI:hover, #carLeasing:hover {
-  background-color: lightGray;
-  color: black;
+#collegeROI:hover {
+  background-color: red;
+}
+
+#carLeasing:hover {
+  background-color: black;
 }
 
 #results {
   display: none;
 }
 
+#city {
+
+}
+
 .colleges {
   text-align: center;
-  border-radius: 20px;
 }
 
 .howYouLive {
   text-align: center;
-  border-radius: 20px;
 }
 
 .gif {
@@ -124,7 +95,6 @@ body {
   margin-right: auto;
   width: 300px;
   height: 200px;
-  border-radius: 20px;
 }
 
 .image {
@@ -140,9 +110,7 @@ body {
   width: 300px;
   height: 133px;
   perspective: 1000px;
-
 }
-
 
 
 .flip-card-inner {
@@ -153,7 +121,6 @@ body {
   transition: transform 0.8s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-
 }
 
 
@@ -167,7 +134,6 @@ body {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  border-radius: 20px;
 }
 
 
@@ -178,7 +144,7 @@ body {
 
 
 .flip-card-back {
-  background-color: #b4033b;
+  background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
 }
@@ -190,6 +156,17 @@ body {
 }
 
 
+body {
+  color: white;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: top;
+  background-image:url(http://bit.ly/2gPLxZ4);
+  width: 100%;
+  height: 100 % ;
+}
 
 
 form, #city {
